--- a/src/app/pages/edit-department/edit-department.page.html
+++ b/src/app/pages/edit-department/edit-department.page.html
@@ -8,17 +8,18 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="departmentForm" (ngSubmit)="editDepartment()">
+  <form [formGroup]="departmentForm" >
     <ion-list>
       <ion-item>
         <ion-label position="floating">Department Name</ion-label>
-        <ion-input value="{{department.role_name}}" id="role_name" type="text"></ion-input>
+        <ion-input formControlName="name" type="text" class="form-control" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Description</ion-label>
-        <ion-input value="{{department.description}}" id="description" type="text"></ion-input>
+        <ion-input  formControlName="description" type="text" class="form-control" required></ion-input>
       </ion-item>
     </ion-list>
-    <ion-button expand="full" type="submit">Save</ion-button>
+    <ion-button expand="full" type="submit" (click)="editDepartment(department.id)">Save</ion-button>
   </form>
+  <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
