--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,23 +7,19 @@
           <ion-card-title color="dark-blue">MBOPE GE</ion-card-title>
         </div>
       </ion-card-header>
-
       <ion-card-content>
-        <form [formGroup] ="form">
-        <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <ion-input type="text" formControlName="email"></ion-input>
-        </ion-item>
-        <ion-label color="danger" *ngif="form.get('email').touched && form.get('email').errors?.email">Email is invalid</ion-label>
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <ion-input type="password" formControlName="password"></ion-input>
-        </ion-item>
-        <ion-label color="danger" *ngif="form.get('email').touched && form.get('password').errors?.required">Password is mandatory</ion-label>
-        <ion-button color="dark" fill="clear" size="full">Forgot email/password ?</ion-button>
-        <ion-button color="success" size="full" [disabled]="!form.valid" (click)="login()">Login</ion-button>
-        <ion-button color="success" size="full" fill="clear" (click)="register()">Register</ion-button>
-      </form>
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Username</ion-label>
+            <ion-input [(ngModel)]="username" name="username"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input [(ngModel)]="password" name="password" type="password"></ion-input>
+          </ion-item>
+          <ion-button expand="full" (click)="login()">Login</ion-button>
+          <ion-button expand="full" routerLink="/register">SignUp</ion-button>
+        </ion-list>
       </ion-card-content>
     </ion-card>
   </div>
