--- a/src/app/pages/add-attendance/add-attendance.page.html
+++ b/src/app/pages/add-attendance/add-attendance.page.html
@@ -11,36 +11,20 @@
   <form [formGroup]="attendanceForm" (ngSubmit)="addAttendanceRecord()">
     <ion-item>
       <ion-label position="floating">Employee Name</ion-label>
-      <ion-select formControlName="employeeName" required>
+      <ion-select [(ngModel)]="employee" class="form-control" [ngModelOptions]="{standalone: true}" required>
         <ion-select-option *ngFor="let employee of employees" [value]="employee.id">{{ employee.first_name }} {{ employee.last_name }}</ion-select-option>
       </ion-select>
     </ion-item>
-
     <ion-item>
-      <ion-label position="floating">Date</ion-label>
-      <ion-input type="date" formControlName="date" required></ion-input>
+      <ion-label position="floating">Attendance Type</ion-label>
+      <ion-select [(ngModel)]="attendance_type" class="form-control" [ngModelOptions]="{standalone: true}" required>
+        <ion-select-option value="ARRIVING TIME" >Arriving Time</ion-select-option>
+        <ion-select-option value="START BREAK TIME" >Start Break Time</ion-select-option>
+        <ion-select-option value="END BREK TIME" >End Break Time </ion-select-option>
+        <ion-select-option value="LEAVING TIME" >Leaving Time</ion-select-option>
+      </ion-select>
     </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Arriving Time</ion-label>
-      <ion-input type="time" formControlName="arrivingTime" required></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Start Break Time</ion-label>
-      <ion-input type="time" formControlName="startBreakTime"required></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">End Break Time</ion-label>
-      <ion-input type="time" formControlName="endBreakTime" required></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Leaving Time</ion-label>
-      <ion-input type="time" formControlName="leavingTime" required></ion-input>
-    </ion-item>
-
     <ion-button expand="full" type="submit">Add Attendance Record</ion-button>
   </form>
+  <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
