--- a/src/app/pages/add-task/add-task.page.html
+++ b/src/app/pages/add-task/add-task.page.html
@@ -8,43 +8,41 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="taskForm" (ngSubmit)="addTask()">
+  <form [formGroup]="taskForm" (ngSubmit)="postTask()">
     <ion-item>
       <ion-label position="floating">Title</ion-label>
-      <ion-input type="text" formControlName="title" required></ion-input>
+      <ion-input type="text"  [(ngModel)]="title" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Description</ion-label>
-      <ion-textarea formControlName="description" required></ion-textarea>
+      <ion-textarea  [(ngModel)]="description" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-textarea>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Status</ion-label>
-      <ion-select formControlName="status" required>
-        <ion-select-option value="Pending">Pending</ion-select-option>
-        <ion-select-option value="In Progress">In Progress</ion-select-option>
-        <ion-select-option value="Completed">Completed</ion-select-option>
+      <ion-select  [(ngModel)]="status" class="form-control" [ngModelOptions]="{standalone: true}" required>
+        <ion-select-option value="PENDING">Pending</ion-select-option>
+        <ion-select-option value="PROGRESSING">In Progress</ion-select-option>
+        <ion-select-option value="COMPLETE">Completed</ion-select-option>
       </ion-select>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Start Date</ion-label>
-      <ion-input type="date" formControlName="startDate" required></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">End Date</ion-label>
-      <ion-input type="date" formControlName="endDate" required></ion-input>
-    </ion-item>
-
-    <ion-item>
       <ion-label position="floating">Employee</ion-label>
-      <ion-select formControlName="employee" required>
+      <ion-select  [(ngModel)]="employee" class="form-control" [ngModelOptions]="{standalone: true}" required>
         <ion-select-option *ngFor="let employee of employees" [value]="employee.id">{{ employee.first_name }} {{ employee.last_name }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Project</ion-label>
+      <ion-select  [(ngModel)]="project" class="form-control" [ngModelOptions]="{standalone: true}" required>
+        <ion-select-option *ngFor="let project of projects" [value]="project.id">{{ project.title }}</ion-select-option>
       </ion-select>
     </ion-item>
 
     <ion-button expand="full" type="submit">Add Task</ion-button>
   </form>
+  <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
