--- a/src/app/pages/add-user/add-user.page.html
+++ b/src/app/pages/add-user/add-user.page.html
@@ -8,22 +8,23 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="userForm" (ngSubmit)="addUser()">
+  <form [formGroup]="userForm" (ngSubmit)="postUser()">
     <ion-item>
-      <ion-label position="floating">Name</ion-label>
-      <ion-input type="text" formControlName="username"></ion-input>
+      <ion-label position="floating">Username</ion-label>
+      <ion-input type="text" [(ngModel)]="username" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
     </ion-item>
   
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" formControlName="email"></ion-input>
+      <ion-input type="email" [(ngModel)]="email" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
     </ion-item>
   
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" formControlName="password"></ion-input>
+      <ion-input type="password" [(ngModel)]="password"  class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
     </ion-item>
 
     <ion-button expand="full" type="submit">Add User</ion-button>
   </form>
+  <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
