--- a/src/app/pages/edit-task/edit-task.page.html
+++ b/src/app/pages/edit-task/edit-task.page.html
@@ -8,42 +8,33 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="taskForm" (ngSubmit)="editTask()">
+  <form [formGroup]="taskForm" (ngSubmit)="editTask(task.id)">
     <ion-list>
       <ion-item>
         <ion-label position="floating">Task Title</ion-label>
-        <ion-input value="{{task.title}}" name="title" type="text"></ion-input>
+        <ion-input formControlName="title" type="text"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Description</ion-label>
-        <ion-textarea value="{{task.description}}" name="description"></ion-textarea>
+        <ion-textarea formControlName="description"></ion-textarea>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Status</ion-label>
-        <ion-select value="{{task.status}}" name="status">
-          <ion-select-option value="Pending">Pending</ion-select-option>
-          <ion-select-option value="In Progress">In Progress</ion-select-option>
-          <ion-select-option value="Completed">Completed</ion-select-option>
+        <ion-select  formControlName="status">
+          <ion-select-option value="PENDING">Pending</ion-select-option>
+          <ion-select-option value="PROGRESSING">In Progress</ion-select-option>
+          <ion-select-option value="COMPLETE">Completed</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Start Date</ion-label>
-        <ion-datetime value="{{task.startDate}}" name="startDate" displayFormat="MMM DD, YYYY"
-          pickerFormat="MMM DD YYYY"></ion-datetime>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">End Date</ion-label>
-        <ion-datetime value="{{task.endDate}}" name="endDate" displayFormat="MMM DD, YYYY"
-          pickerFormat="MMM DD YYYY"></ion-datetime>
-      </ion-item>
-      <ion-item>
-        <ion-label position="floating">Submitted Date</ion-label>
-        <ion-datetime value="{{task.submittedDate}}" name="submittedDate" displayFormat="MMM DD, YYYY"
-          pickerFormat="MMM DD YYYY"></ion-datetime>
+        <ion-label position="floating">Project</ion-label>
+        <ion-select  formControlName="employee">
+          <ion-select-option *ngFor="let project of projects" [value]="project.id">{{ project.title }}</ion-select-option>
+        </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Employee</ion-label>
-        <ion-select value="{{task.employee}}" name="employee">
+        <ion-select formControlName="employee">
           <ion-select-option *ngFor="let employee of employees" [value]="employee.id">{{ employee.first_name }} {{
             employee.last_name }}</ion-select-option>
         </ion-select>
@@ -51,4 +42,5 @@
     </ion-list>
     <ion-button expand="full" type="submit">Save</ion-button>
   </form>
+  <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
