--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -9,23 +9,23 @@
       </ion-card-header>
 
       <ion-card-content>
-        <form [formGroup]="registerForm" (ngSubmit)="register()">
+        <form  [formGroup]="registerForm" (ngSubmit)="registerUser()">
           <ion-item>
-            <ion-label position="floating">Name</ion-label>
-            <ion-input type="text" formControlName="username"></ion-input>
+            <ion-label position="floating">Username</ion-label>
+            <ion-input type="text" name="username" [(ngModel)]="username" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
           </ion-item>
-        
+
           <ion-item>
             <ion-label position="floating">Email</ion-label>
-            <ion-input type="email" formControlName="email"></ion-input>
+            <ion-input type="text" name="email" [(ngModel)]="email" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
           </ion-item>
-        
+  
           <ion-item>
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
+            <ion-input type="password" name="password" [(ngModel)]="password" class="form-control" [ngModelOptions]="{standalone: true}" required></ion-input>
           </ion-item>
-      
-          <ion-button expand="full" type="submit">register</ion-button>
+  
+          <ion-button expand="full" type="submit" >Register</ion-button>
         </form>
       </ion-card-content>
     </ion-card>
