--- a/src/app/pages/tasks/tasks.page.html
+++ b/src/app/pages/tasks/tasks.page.html
@@ -9,17 +9,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="filterTasks()"></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchQuery" (ionChange)="filterTasks()"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let task of filteredTasks; let i = index">
+    <ion-item *ngFor="let task of filteredTasks; let index=index">
       <ion-label>{{ task.title }}</ion-label>
       <ion-buttons slot="end">
-        <ion-button (click)="editTask()">
+        <ion-button (click)="editTask(index)">
           <ion-icon name="pencil"></ion-icon>
         </ion-button>
       </ion-buttons>
       <ion-buttons slot="end">
-        <ion-button (click)="deleteItem(i)">
+        <ion-button (click)="deleteItem(task.id)">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
       </ion-buttons>
