--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,30 +40,38 @@
               <ion-icon slot="start" name="business-outline"></ion-icon>
               Department
             </ion-item>
+            <ion-item lines="none" routerDirection="root" routerLink="/zamchat-registration">
+              <ion-icon slot="start" name="log-in-outline"></ion-icon>
+              <ion-label>Zamchat Registration</ion-label>
+            </ion-item>
           </ion-item-group>
           <ion-item-group>
             <ion-item-divider>
               <ion-icon slot="start" name="settings-outline"></ion-icon>
               Settings
             </ion-item-divider>
-            <ion-item lines="none" routerDirection="root" routerLink="/personal-information">
+            <!-- <ion-item lines="none" routerDirection="root" routerLink="/personal-information"> -->
+            <ion-item lines="none" routerDirection="root" >
               <ion-icon slot="start" name="person-outline"></ion-icon>
               Personal Information
             </ion-item>
-            <ion-item lines="none" routerDirection="root" routerLink="/account-settings">
+            <!-- <ion-item lines="none" routerDirection="root" routerLink="/account-settings"> -->
+            <ion-item lines="none" routerDirection="root">
               <ion-icon slot="start" name="key-outline"></ion-icon>
               Account Settings
             </ion-item>
-            <ion-item lines="none" routerDirection="root" routerLink="/notifications">
+            <!-- <ion-item lines="none" routerDirection="root" routerLink="/notifications"> -->
+            <ion-item lines="none" routerDirection="root">
               <ion-icon slot="start" name="notifications-outline"></ion-icon>
               Notification
             </ion-item>
-            <ion-item lines="none" routerDirection="root" routerLink="/permission">
+            <!-- <ion-item lines="none" routerDirection="root" routerLink="/permission"> -->
+            <ion-item lines="none" routerDirection="root">
               <ion-icon slot="start" name="lock-closed-outline"></ion-icon>
               Permission
             </ion-item>
           </ion-item-group>
-          <ion-item routerDirection="root" routerLink="/logout">
+          <ion-item lines="none" routerDirection="root" routerLink="/logout">
             <ion-icon slot="start" name="log-out-outline"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
