--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -17,10 +17,10 @@
       <ion-label position="floating">Email</ion-label>
       <ion-input formControlName="email" type="email" class="form-control" required></ion-input>
     </ion-item>
-    <!-- <ion-item>
-      <ion-label position="floating">Password</ion-label>
+    <ion-item>
+      <ion-label  position="floating">Password</ion-label>
       <ion-input formControlName="password" type="password" class="form-control" required></ion-input>
-    </ion-item> -->
+    </ion-item>
     <!-- <ion-item>
       <ion-label>Active</ion-label>
       <ion-toggle formControlName="is_active" class="form-control" required></ion-toggle>
@@ -29,7 +29,7 @@
       <ion-label>Superuser</ion-label>
       <ion-toggle formControlName="is_superuser" class="form-control" required></ion-toggle>
     </ion-item> -->
-    <ion-button expand="full" type="submit" (click)="editUser(user.id)">Save</ion-button>
+    <ion-button [disabled]="!canSave" expand="full" type="submit" (click)="editUser(user.id)">Save</ion-button>
   </form>
   <ion-button expand="full" (click)="closeModal()">Close</ion-button>
 </ion-content>
