--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -20,7 +20,7 @@
         </ion-button>
       </ion-buttons>
       <ion-buttons slot="end">
-        <ion-button (click)="deleteItem(user.id)">
+        <ion-button [disabled]="!canSave" (click)="deleteItem(user.id)">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
       </ion-buttons>
