--- a/src/global.scss
+++ b/src/global.scss
@@ -27,8 +27,13 @@
 
 
 .flex-center{
-    display:flex;
     justify-content:center;
     align-items:center;
-    height:100%;
+    margin: 10px;
+    margin-top: 10px;
+    
 }
+ion-content {
+    background-color: pink;
+    color: white;
+  }
